crates/model/tests/compile_fail/model_missing_root.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

// model! requires a `root` field.
quent_model::model! {
    name: App,
    entities: { Cluster },
}

fn main() {}
